--- a/src/components/ui/menu-button.astro
+++ b/src/components/ui/menu-button.astro
@@ -25,7 +25,8 @@ const { expanded } = Astro.props;
   id="menu-button"
   popovertarget="mobile-menu"
   popovertargetaction={expanded ? "hide" : "show"}
-  type="button">
+  type="button"
+>
   <Image
     alt={expanded ? "Close menu icon" : "Menu icon"}
     class="menu-icon"
