--- a/src/components/ui/navigation.astro
+++ b/src/components/ui/navigation.astro
@@ -135,7 +135,7 @@ const { links = headerLinks } = Astro.props;
         window.innerWidth - document.documentElement.clientWidth;
       document.documentElement.style.setProperty(
         "--scrollbar-width",
-        `${scrollBarWidth}px`
+        `${scrollBarWidth}px`,
       );
     }
 
