--- a/src/components/ui/text-input.astro
+++ b/src/components/ui/text-input.astro
@@ -13,7 +13,14 @@ const { id, label, type, ...rest }: Props = Astro.props;
 <div class="form-group">
   <label class="form-label" for={id}>{label}</label>
   <div class="input-group">
-    <input data-invalid="false" id={id} name={id} type={type} {...rest} />
+    <input
+      class="input"
+      data-invalid={rest.required && !rest.value ? "true" : "false"}
+      id={id}
+      name={id}
+      type={type}
+      {...rest}
+    />
     <small class="feedback-text"></small>
   </div>
 </div>
@@ -44,7 +51,7 @@ const { id, label, type, ...rest }: Props = Astro.props;
       }
     }
 
-    & input {
+    & .input {
       appearance: none;
       padding: 1rem;
       color: var(--color-grey-light);
@@ -61,7 +68,7 @@ const { id, label, type, ...rest }: Props = Astro.props;
     }
   }
 
-  .form-group .input-group input[data-invalid="true"] {
+  .input[data-invalid="true"] {
     border: 1px solid var(--color-danger);
     box-shadow: 0 0 3px var(--color-danger);
 
@@ -74,10 +81,10 @@ const { id, label, type, ...rest }: Props = Astro.props;
     }
   }
 
-  input:-webkit-autofill,
-  input:-webkit-autofill:hover,
-  input:-webkit-autofill:focus,
-  input:-webkit-autofill:active {
+  .input:-webkit-autofill,
+  .input:-webkit-autofill:hover,
+  .input:-webkit-autofill:focus,
+  .input:-webkit-autofill:active {
     -webkit-text-fill-color: var(--color-grey-light) !important;
     -webkit-box-shadow: 0 0 0 1000px var(--color-grey-dark2) inset !important;
     -webkit-background-clip: text !important;
