--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
-import Header from "@/components/header.astro";
+import About from "@/components/about.astro";
 import Contacts from "@/components/contacts.astro";
 import Footer from "@/components/footer.astro";
-import About from "@/components/about.astro";
+import Header from "@/components/header.astro";
 
 interface Props {
   title: string;
@@ -18,6 +18,12 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta content="Astro description" name="description" />
     <meta content="width=device-width" name="viewport" />
+    <meta content="Your site description" name="description" />
+    <meta content="your, keywords" name="keywords" />
+    <meta content={title} property="og:title" />
+    <meta content="Your site description" property="og:description" />
+    <meta content="website" property="og:type" />
+    <meta content={Astro.url} property="og:url" />
     <link href="/sitemap-index.xml" rel="sitemap" />
     <link href="/favicon.ico" rel="icon" type="image/svg+xml" />
     <link href="normalize.css" rel="stylesheet" />
