--- a/src/components/product/product-page.astro
+++ b/src/components/product/product-page.astro
@@ -163,6 +163,14 @@ const mainPhotoSrc = mainPhoto.url;
     grid-gap: 1.5rem;
     grid-template-columns: repeat(4, 1fr);
     list-style: none;
+
+    & .product__thumbs__img {
+      padding: 1rem;
+      width: 100%;
+      height: 100%;
+      max-height: 11rem;
+      object-fit: contain;
+    }
   }
 
   .product__thumbs li {
@@ -179,15 +187,6 @@ const mainPhotoSrc = mainPhoto.url;
 
   .product__thumbs li:hover {
     background: var(--color-divider);
-  }
-
-  // eslint-disable-next-line astro/no-unused-css-selector
-  .product__thumbs__img {
-    padding: 1rem;
-    width: 100%;
-    height: 100%;
-    max-height: 11rem;
-    object-fit: contain;
   }
 
   .product__desc {
