feat(product-page): add service entrypoint for image handling and reorder imports for clarity

--- a/src/components/product/product-page.astro
+++ b/src/components/product/product-page.astro
@@ -1,6 +1,7 @@
 ---
-import Article from "../ui/article.astro";
 import { Image } from "astro:assets";
+
+import Article from "../ui/article.astro";
 import InternalLink from "../ui/internal-link.astro";
 import Price from "@/components/ui/price.astro";
 import type { Product } from "@/schemas/contentful-transformed.types";
@@ -52,7 +53,7 @@ const mainPhotoSrc = mainPhoto.url;
                   src={photo.url}
                 />
               </li>
-            )),
+            ))
           )
         }
       </ul>
@@ -256,7 +257,7 @@ const mainPhotoSrc = mainPhoto.url;
   const imgElements = document.querySelectorAll("img[data-color]");
   const selectElement = document.querySelector("select");
   const current = document.querySelector(
-    "#product__thumbs--current",
+    "#product__thumbs--current"
   ) as HTMLImageElement;
   const thumbs = document.querySelectorAll(".product__thumbs img");
 
@@ -265,7 +266,7 @@ const mainPhotoSrc = mainPhoto.url;
     const colorValue = target.value;
 
     const selectedImage = document.querySelector(
-      `img[data-color="${colorValue}"]`,
+      `img[data-color="${colorValue}"]`
     );
     if (selectedImage) {
       current.src = (selectedImage as HTMLImageElement).src;
@@ -312,7 +313,7 @@ const mainPhotoSrc = mainPhoto.url;
   };
 
   thumbs.forEach((thumb) =>
-    thumb.addEventListener("click", thumbClick as EventListener),
+    thumb.addEventListener("click", thumbClick as EventListener)
   );
 
   document.addEventListener("DOMContentLoaded", () => {
