--- a/src/components/ui/article.astro
+++ b/src/components/ui/article.astro
@@ -1,7 +1,6 @@
 ---
 import BlockTitle from "./block-title.astro";
 import Container from "./container.astro";
-import { Fragment } from "astro/jsx-runtime";
 
 type Theme = "light" | "dark";
 
@@ -21,8 +20,7 @@ const { articleId, appearanceMode = "light", title } = Astro.props;
       dark: appearanceMode !== "light",
     },
   ]}
-  id={articleId}
->
+  id={articleId}>
   <Container>
     <BlockTitle appearanceMode={appearanceMode} title={title} />
     <slot />
