feat: remove PostCSS configuration and related dependencies; update stylesheet links in Layout.astro

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,8 +26,9 @@ const { title } = Astro.props;
     <meta content={Astro.url} property="og:url" />
     <link href="/sitemap-index.xml" rel="sitemap" />
     <link href="/favicon.ico" rel="icon" type="image/svg+xml" />
-    <link href="normalize.css" rel="stylesheet" />
-    <link href="global.css" rel="stylesheet" />
+    <link href="/normalize.css" rel="stylesheet" />
+    <link href="/global.css" rel="stylesheet" />
+    <link href="/styles/style.css" rel="stylesheet" />
     <meta content={Astro.generator} name="generator" />
     <title>{title}</title>
   </head>
