update about section with new company information and product offerings

--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -4,12 +4,13 @@ import Article from "./ui/article.astro";
 
 <Article appearanceMode="dark" articleId="about" title="Apie mus">
   <p class="about-paragraph">
-    1991 m. kovo mėn. 27 d. įkurta individuali A.Brazdžiaus įmonė. Įmonės
-    pagrindinė veikla &ndash; didmeninė prekyba medicininės paskirties
-    priemonėmis. Nuo 2008 m. rugsėjo mėn. 23 d. perregistruota į UAB „Brameda“.
+    Platiname pažangias avalynę padengiančias mašinas, firmos Swimsuit Dryers
+    Company maudymosi kostiumėlių džiovintuvus, modernius pėdų dezinfekatorius.
     <br />
     <br />
-    Platiname pažangias avalynę padengiančias mašinas, firmos Swimsuit Dryers Company
-    maudymosi kostiumėlių džiovintuvus, modernius pėdų dezinfekatorius.
+    UAB „Brameda“ savo veiklą pradėjo 1991 m. Šiuo metu atstovaujame gerai žinomus
+    prekių ženklus. Platiname Anglijos gamintojo „Swimsuit Dryers Company“ maudymosi
+    kostiumėlių džiovintuvus, „Quen“ pažangius avalynę padengiančius aparatus, Vokietijos
+    gamintojo „Ophardt“ modernius pėdų dezinfekatorius.
   </p>
 </Article>
