--- a/src/components/ui/article.astro
+++ b/src/components/ui/article.astro
@@ -29,7 +29,7 @@ const { articleId, appearanceMode = "light", title } = Astro.props;
 
 <style>
   .article {
-    padding: var(--default-spacing);
+    padding-block: var(--default-spacing);
   }
 
   .article.dark {
