--- a/src/components/ui/section.astro
+++ b/src/components/ui/section.astro
@@ -29,7 +29,7 @@ const { sectionId, appearanceMode = "light", title } = Astro.props;
 
 <style>
   .section {
-    padding: var(--default-spacing);
+    padding-block: var(--default-spacing);
   }
 
   .section.dark {
