--- a/src/components/ui/article.astro
+++ b/src/components/ui/article.astro
@@ -20,7 +20,8 @@ const { articleId, appearanceMode = "light", title } = Astro.props;
       dark: appearanceMode !== "light",
     },
   ]}
-  id={articleId}>
+  id={articleId}
+>
   <Container>
     <BlockTitle appearanceMode={appearanceMode} title={title} />
     <slot />
